--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: 01 Java CI
+name: 02 Java Maven Build
 
 on:
   push:
@@ -24,3 +24,12 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Run Unit Tests
+        run: mvn test
+
+      - name: Archive Build Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+         name: maven-artifacts
+         path: target/*.jar
