--- a/pom.xml
+++ b/pom.xml
@@ -12,32 +12,33 @@
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
 
+    <!-- JUnit Jupiter -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.11.3</version>
+        <scope>test</scope>
+    </dependency>
     <!-- JUnit Jupiter API -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter</artifactId>
-    <version>5.8.2</version>
-    <scope>test</scope>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.11.3</version>
+        <scope>test</scope>
     </dependency>
     <!-- JUnit Jupiter Engine -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.8.2</version>
+        <version>5.11.3</version>
         <scope>test</scope>
     </dependency>
     <!-- JUnit Jupiter Params for Parameterized Tests -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-params</artifactId>
-        <version>5.8.2</version>
+        <version>5.11.3</version>
         <scope>test</scope>
     </dependency>
   
@@ -54,9 +55,9 @@
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
-               <version>2.12.2</version>
+               <version>3.5.2</version>
            </plugin>
-           <plugin>
+        <!--   <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.7</version>
@@ -73,12 +74,12 @@
                </goals>
            </execution>
        </executions>
-   </plugin>
-   <plugin>
+   </plugin>-->
+   <!--<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.0</version>
-   </plugin>
+   </plugin>-->
        </plugins>
    </build>
 </project>
