--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: 02 Java Maven Build
+name: 03 Maven Test Report
 
 on:
   push:
@@ -26,10 +26,16 @@ jobs:
         run: mvn clean install
 
       - name: Run Unit Tests
-        run: mvn test
+        run: mvn test || true
 
-      - name: Archive Build Artifacts
+      - name: Upload Test Results
         uses: actions/upload-artifact@v4
         with:
-         name: maven-artifacts
-         path: target/*.jar
+          name: test-results
+          path: target/surefire-reports/*.xml
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        if: success() || failure() # immer ausführen, auch wenn Tests fehlschlagen
+        with:
+          report_paths: '**/target/surefire-reports/*.xml'
